@@ -1,3 +1,8 @@
+2002-04-22  Anders Carlsson  <andersca@gnu.org>
+
+	* gnome-icon-entry.c: Use our own delete_event handler for the dialog
+	so that it won't get destroyed. Fixes #75230.
+
 Fri Apr 19 21:02:09 2002  George Lebl <jirka@5z.com>
 
 	* gnome-about.c: Fix #77931, that is, open only one credits dialog.
